--- a/cargo-stylus/Cargo.toml
+++ b/cargo-stylus/Cargo.toml
@@ -29,6 +29,10 @@ libloading = "0.8"
 parking_lot = "0.12"
 rustc-host = "0.1"
 simple_logger = "5.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+uuid = { version = "1.0", features = ["v4"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
