--- a/cargo-stylus/Cargo.toml
+++ b/cargo-stylus/Cargo.toml
@@ -25,10 +25,16 @@ clap = { version = "4.5.39", features = ["derive"] }
 function_name = "0.3"
 itertools = "0.14"
 lazy_static = "1.5"
+once_cell = "1.21.3"
 libloading = "0.8"
 parking_lot = "0.12"
 rustc-host = "0.1"
 simple_logger = "5.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+uuid = { version = "1.0", features = ["v4"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
+tempfile = "3.10"
